<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10dp"
        android:text="@string/question_1"
        android:textSize="@dimen/_20sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="44dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/_24sp"
        android:layout_marginTop="@dimen/_52"
        android:padding="@dimen/_10dp"
        android:text="@string/google_is_founded_in"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="44dp" />

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="@dimen/_200"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true">


        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5dp"
            android:text="@string/_4_september_1998"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="173dp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5dp"
            android:text="@string/_4_september_1997"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="270dp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5dp"
            android:text="@string/_5_september_1998"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="222dp" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/_5dp"
            android:text="@string/none" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/_5dp"
            android:text="@string/none"
            android:visibility="invisible"
            android:checked="true"/>

    </RadioGroup>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="71dp"
        android:text="@string/next"
        android:onClick="sendMessage1" />


</RelativeLayout>